k8s/corpora.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corpora
spec:
  type: NodePort
  selector:
    app: corpora
  ports:
    - port: 80
      targetPort: 80
