k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corpora
spec:
  type: ClusterIP
  selector:
    app: corpora
  ports:
    - port: 80
      targetPort: 80
